[gd_scene load_steps=6 format=3 uid="uid://deyd0k38tajk3"]

[ext_resource type="Script" uid="uid://ci6sxk4t7xxq5" path="res://instances/pnl_twitch_auth_irc.gd" id="1_fkuuy"]
[ext_resource type="PackedScene" uid="uid://cwg72p5gy7ib3" path="res://instances/btn_collapse.tscn" id="1_jfw5k"]
[ext_resource type="StyleBox" uid="uid://be1r1ht3qo0ct" path="res://ui/panel_flat_dark_semitransparent.tres" id="2_bftkl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5a7uk"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.129412, 0.14902, 0.180392, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gfgcu"]
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.313726)

[node name="pnl_twitch_auth_irc" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fkuuy")
metadata/_tab_index = 3

[node name="scroll" type="ScrollContainer" parent="."]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="vb" type="VBoxContainer" parent="scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="lb_title" type="Label" parent="scroll/vb"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_5a7uk")
text = "Twitch Authentication and IRC"
label_settings = SubResource("LabelSettings_gfgcu")
horizontal_alignment = 1

[node name="sep_group" type="HSeparator" parent="scroll/vb"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="lbl_twitch_authentication" parent="scroll/vb" node_paths=PackedStringArray("nodes_to_collapse") instance=ExtResource("1_jfw5k")]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_bftkl")
text = "Twitch Authentication"
nodes_to_collapse = [NodePath("../vb2")]
text_centered = true

[node name="vb2" type="VBoxContainer" parent="scroll/vb"]
layout_mode = 2

[node name="hb_twitch_auth_connect" type="HBoxContainer" parent="scroll/vb/vb2"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="btn_connect_to_twitch" type="Button" parent="scroll/vb/vb2/hb_twitch_auth_connect"]
layout_mode = 2
text = "Connect to Twitch"

[node name="hb_twitch_auth_broadcaster_name" type="HBoxContainer" parent="scroll/vb/vb2"]
unique_name_in_owner = true
layout_mode = 2

[node name="lb" type="Label" parent="scroll/vb/vb2/hb_twitch_auth_broadcaster_name"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
text = "Broadcaster Name"
horizontal_alignment = 2

[node name="input" type="LineEdit" parent="scroll/vb/vb2/hb_twitch_auth_broadcaster_name"]
layout_mode = 2
size_flags_horizontal = 3
text = "iRadDev"
editable = false

[node name="hb_twitch_auth_broadcaster_id" type="HBoxContainer" parent="scroll/vb/vb2"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="lb" type="Label" parent="scroll/vb/vb2/hb_twitch_auth_broadcaster_id"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
text = "Broadcaster User ID"
horizontal_alignment = 2

[node name="input" type="LineEdit" parent="scroll/vb/vb2/hb_twitch_auth_broadcaster_id"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "12345678"
editable = false

[node name="sep_group2" type="HSeparator" parent="scroll/vb"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="lbl_twitch_chatbot" parent="scroll/vb" node_paths=PackedStringArray("nodes_to_collapse") instance=ExtResource("1_jfw5k")]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_bftkl")
text = "Twitch Chatbot Configuration"
nodes_to_collapse = [NodePath("../vb4")]
text_centered = true

[node name="vb4" type="VBoxContainer" parent="scroll/vb"]
layout_mode = 2

[node name="hb" type="HBoxContainer" parent="scroll/vb/vb4"]
layout_mode = 2
size_flags_vertical = 0

[node name="spacer" type="Control" parent="scroll/vb/vb4/hb"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2

[node name="input_twitch_chatbot_enabled" type="CheckBox" parent="scroll/vb/vb4/hb"]
unique_name_in_owner = true
layout_mode = 2
text = "Enable Twitch Chatbot"

[node name="spacer3" type="Control" parent="scroll/vb/vb4/hb"]
layout_mode = 2
size_flags_horizontal = 3

[node name="input_twitch_chatbot_use_eventsub" type="CheckBox" parent="scroll/vb/vb4/hb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Use EventSub instead of IRC, which will also currently disable notifications for people joining/leaving chat."
autowrap_mode = 2

[node name="spacer2" type="Control" parent="scroll/vb/vb4/hb"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="hb_twitch_chatbot_name" type="HBoxContainer" parent="scroll/vb/vb4"]
unique_name_in_owner = true
layout_mode = 2

[node name="lb" type="Label" parent="scroll/vb/vb4/hb_twitch_chatbot_name"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
text = "Bot Name"
horizontal_alignment = 2

[node name="input" type="LineEdit" parent="scroll/vb/vb4/hb_twitch_chatbot_name"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "iRadDev"
editable = false

[node name="btn_use_different" type="Button" parent="scroll/vb/vb4/hb_twitch_chatbot_name"]
layout_mode = 2
disabled = true
text = "Use Another Account"

[node name="hb_twitch_chatbot_id" type="HBoxContainer" parent="scroll/vb/vb4"]
unique_name_in_owner = true
layout_mode = 2

[node name="lb" type="Label" parent="scroll/vb/vb4/hb_twitch_chatbot_id"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
text = "Bot User ID"
horizontal_alignment = 2

[node name="input" type="LineEdit" parent="scroll/vb/vb4/hb_twitch_chatbot_id"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "12345678"
editable = false

[node name="hb_twitch_chatbot_join_message" type="HBoxContainer" parent="scroll/vb/vb4"]
unique_name_in_owner = true
layout_mode = 2

[node name="lb" type="Label" parent="scroll/vb/vb4/hb_twitch_chatbot_join_message"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
text = "Join Message"
horizontal_alignment = 2

[node name="input" type="LineEdit" parent="scroll/vb/vb4/hb_twitch_chatbot_join_message"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "!raid kani_dev"

[node name="hb_twitch_chatbot_main_channel" type="HBoxContainer" parent="scroll/vb/vb4"]
unique_name_in_owner = true
layout_mode = 2

[node name="lb" type="Label" parent="scroll/vb/vb4/hb_twitch_chatbot_main_channel"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
text = "Main Channel Name
"
horizontal_alignment = 2

[node name="input" type="LineEdit" parent="scroll/vb/vb4/hb_twitch_chatbot_main_channel"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "iRadDev"

[connection signal="pressed" from="scroll/vb/vb2/hb_twitch_auth_connect/btn_connect_to_twitch" to="." method="_on_btn_connect_to_twitch_pressed"]
[connection signal="text_changed" from="scroll/vb/vb2/hb_twitch_auth_broadcaster_name/input" to="." method="_on_twitch_auth_broadcaster_name_input_text_changed"]
[connection signal="text_changed" from="scroll/vb/vb2/hb_twitch_auth_broadcaster_id/input" to="." method="_on_twitch_auth_broadcaster_id_input_text_changed"]
[connection signal="toggled" from="scroll/vb/vb4/hb/input_twitch_chatbot_enabled" to="." method="_on_input_twitch_chatbot_enabled_toggled"]
[connection signal="toggled" from="scroll/vb/vb4/hb/input_twitch_chatbot_use_eventsub" to="." method="_on_input_twitch_chatbot_use_eventsub_toggled"]
[connection signal="text_changed" from="scroll/vb/vb4/hb_twitch_chatbot_name/input" to="." method="_on_twitch_chatbot_name_input_text_changed"]
[connection signal="pressed" from="scroll/vb/vb4/hb_twitch_chatbot_name/btn_use_different" to="." method="_on_twitch_chatbot_btn_use_different_pressed"]
[connection signal="text_changed" from="scroll/vb/vb4/hb_twitch_chatbot_id/input" to="." method="_on_twitch_chatbot_id_input_text_changed"]
[connection signal="text_changed" from="scroll/vb/vb4/hb_twitch_chatbot_join_message/input" to="." method="_on_twitch_chatbot_join_message_input_text_changed"]
[connection signal="text_changed" from="scroll/vb/vb4/hb_twitch_chatbot_main_channel/input" to="." method="_on_twitch_chatbot_main_channel_input_text_changed"]
